<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ojasv.homework4.MainActivity">

    <TextView
        android:text="@string/WelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/textViewWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/LoadingTrivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLoading"
        android:layout_below="@+id/textViewWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp" />

    <Button
        android:text="@string/Exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textViewLoading"
        android:layout_toStartOf="@+id/textViewLoading"
        android:layout_marginBottom="54dp"
        android:onClick="quitAction"
        android:id="@+id/buttonExit" />

    <Button
        android:text="@string/StartTrivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonExit"
        android:layout_toRightOf="@+id/textViewLoading"
        android:layout_toEndOf="@+id/textViewLoading"
        android:id="@+id/buttonStartTrivia" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLoading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/progressBar" />

    <ImageView
        android:layout_width="80sp"
        android:layout_height="80sp"
        app:srcCompat="@drawable/trivia"
        android:id="@+id/imageView2"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/textViewLoading"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
