<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ojasv.homework4.StatsActivity">

    <TextView
        android:text="@string/correctAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:id="@+id/textViewCorrectAnswers" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_below="@+id/textViewCorrectAnswers"
        android:layout_centerHorizontal="true"
        android:id="@+id/scrollViewContainer"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:id="@+id/container"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:text="@string/performance"
        android:layout_width="wrap_content"
        android:layout_below="@+id/scrollViewContainer"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPerformance" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_below="@id/textViewPerformance"
        android:id="@+id/progressBar2"
        android:layout_width="250sp"
        android:max="100" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_alignTop="@+id/progressBar2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonFinish"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:onClick="quitAction"/>
</RelativeLayout>
